[package]
name = "rust-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
bytes = "1.0"
rand = { version = "0.8", features = ["small_rng"] }
env_logger = "0.10"